Improve rust cg post

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </p>
   </header>
   <div class="c-article__summary">
-    In the post I want to give a short overview about a part of the current Rust ecosystem regarding Computer Graphics and discuss a few concepts and ideas which could make Rust more interesting in this area.
-Overview While Computer Graphics is often associated with 3D rendering (real-time or offline) it covers several subfields, including: geometric modeling, animation, rendering and a few more.
+    In this post I want to give a short overview about a part of the current Rust ecosystem regarding Computer Graphics and discuss a few concepts and ideas which could make Rust more interesting for this field.
+Overview While Computer Graphics is often associated with 3D rendering (real-time or offline), it covers several subfields including: geometric modeling, animation, rendering and a few more.
 In particular, real-time 3D rendering is the most healthy subfield, mostly driven by the effort of the gamedev community, resulting in the creation of quite a few different libraries:
   </div>
   
