--- a/path_aa.html
+++ b/path_aa.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="path_aa.html">2020 April 27 :: Path Rendering Anti-Aliasing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="path_aa.html" class="active">2020 April 27 :: Path Rendering Anti-Aliasing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
